@@ -120,7 +120,7 @@
 		of configuration file. The default is @code{default}.
 	@item{@var{GTAGSCACHE}}
 		If this variable is set, its value is used as the size of
-		B-tree cache. The default is 5000000 (bytes).
+		B-tree cache. The default is 50000000 (bytes).
 	@item{@var{GTAGSFORCECPP}}
 		If this variable is set, each file whose suffix is 'h' is treated
 		as a C++ source file.
